# ironclaw

./: .env.example  AGENTS.md  Cargo.toml  FEATURE_PARITY.md
.github/workflows/: code_style.yml  live-canary.yml  reborn-integration.yml  reborn-tests.yml  test.yml
crates/ironclaw_agent_loop/: CLAUDE.md  Cargo.toml
crates/ironclaw_agent_loop/src/: default_planner.rs  executor.rs  family.rs  lib.rs  planner.rs  state.rs
crates/ironclaw_agent_loop/tests/: deferred_followups.rs  executor_happy_paths.rs  safety_nets.rs  state_lifecycle.rs  strategy_interactions.rs
crates/ironclaw_approvals/src/: auto_approve.rs  lib.rs
crates/ironclaw_architecture/tests/: reborn_dependency_boundaries.rs
crates/ironclaw_attachments/: Cargo.toml
crates/ironclaw_attachments/src/: inbound.rs  lib.rs
crates/ironclaw_auth/src/: fakes.rs  lib.rs  oauth.rs
crates/ironclaw_authorization/tests/: db_capability_lease_store_contract.rs
crates/ironclaw_capabilities/src/: error.rs  helpers.rs  host.rs  obligations.rs
crates/ironclaw_capabilities/tests/: capability_host_auth_run_state_contract.rs
crates/ironclaw_common/src/: attachment.rs  lib.rs  trust_boundary.rs
crates/ironclaw_conversations/: CLAUDE.md  Cargo.toml
crates/ironclaw_conversations/src/: inbound.rs  lib.rs  trusted_trigger.rs  types.rs
crates/ironclaw_event_projections/: Cargo.toml
crates/ironclaw_event_projections/src/: lib.rs
crates/ironclaw_event_projections/tests/: extension_lifecycle_projection_contract.rs  replay_projection_contract.rs
crates/ironclaw_events/src/: security_audit.rs
crates/ironclaw_extensions/: Cargo.toml
crates/ironclaw_extensions/src/: lib.rs  lifecycle.rs  registry.rs
crates/ironclaw_extensions/tests/: extension_contract.rs
crates/ironclaw_first_party_extensions/: Cargo.toml
crates/ironclaw_first_party_extensions/tests/: gsuite_core.rs
crates/ironclaw_hooks/src/: dispatch.rs  identity.rs  manifest.rs
crates/ironclaw_host_api/src/: http.rs
crates/ironclaw_host_runtime/: Cargo.toml
crates/ironclaw_host_runtime/src/: first_party.rs  lib.rs  obligations.rs  production.rs  services.rs  surface.rs  turn_scheduler.rs  (+1 more)
crates/ironclaw_loop_support/: Cargo.toml
crates/ironclaw_product_adapters/: Cargo.toml
crates/ironclaw_product_workflow/: Cargo.toml
crates/ironclaw_reborn/: Cargo.toml
crates/ironclaw_reborn_cli/: AGENTS.md  Cargo.toml
crates/ironclaw_reborn_composition/: Cargo.toml  build.rs
crates/ironclaw_reborn_config/: Cargo.toml
crates/ironclaw_reborn_config/src/: config_file.rs  lib.rs
crates/ironclaw_secrets/: Cargo.toml
crates/ironclaw_secrets/src/: crypto.rs  db.rs  keychain.rs  legacy_store.rs  lib.rs
crates/ironclaw_secrets/tests/: db_credential_store_contract.rs  db_secret_store_contract.rs  security_findings_poc.rs
crates/ironclaw_threads/: Cargo.toml
crates/ironclaw_turns/: CLAUDE.md  Cargo.toml
crates/ironclaw_turns/src/: block_persistence.rs  checkpoint_state.rs  coordinator.rs  db.rs  filesystem_store.rs  ids.rs  lib.rs  loop_exit.rs  memory.rs  status.rs  store.rs
crates/ironclaw_turns/src/filesystem_store/: runner_lease.rs
crates/ironclaw_turns/src/loop_exit/tests/: mod.rs
crates/ironclaw_turns/src/memory/: mod.rs
crates/ironclaw_turns/src/run_profile/: compaction.rs  host.rs  instruction_bundle.rs  milestones.rs  mod.rs  model.rs  policy.rs  prompt.rs  resolver.rs
crates/ironclaw_turns/tests/: agent_loop_host_contract.rs  checkpoint_state_store_contract.rs  db_turn_state_store_contract.rs  filesystem_turn_state_contract.rs  run_profile_contract.rs  turn_coordinator_contract.rs
crates/ironclaw_wasm_product_adapters/: Cargo.toml
crates/ironclaw_webui_v2/: CLAUDE.md
docker/reborn/: config.production.toml  config.toml
docs/plans/: 2026-05-29-trigger-loop-delivery-resolution-implementation.md  2026-06-06-subagent-compaction-impl.md  2026-06-25-slack-delivery-blocked-terminal.md
docs/reborn/: 2026-04-25-current-architecture-map.md  agent-loop-skeleton.md  how-to-port-channel-to-reborn.md
registry/channels/: wecom.json
scripts/ci/: classify-test-scope.sh  run-reborn-root-partition.sh  test-classify-test-scope.sh
scripts/live-canary/: ACCOUNTS.md  README.md  notify_slack.py  run.sh  test_notify_slack.py  test_run_dispatch.py
scripts/reborn_webui_v2_live_qa/: __init__.py  case_matrix.py  env_helpers.py  errors.py  external_auth_helpers.py  google_api_helpers.py  google_auth_helpers.py  root_filesystem.py  run_live_qa.py  slack_helpers.py  test_run_live_qa.py
src/channels/: channel.rs
tests/: reborn_adapter_installation_scope_isolation_parity.rs  reborn_agent_scope_isolation_parity.rs  reborn_identity_project_scope_isolation_parity.rs  reborn_project_scope_isolation_parity.rs  reborn_trace_file_tools_parity.rs  support_unit_tests.rs
tests/e2e/: helpers.py  pyproject.toml
tools-src/google-drive/: google-drive-tool.capabilities.json
tools-src/google-sheets/: google-sheets-tool.capabilities.json
(+374 files in other folders)
