[package]
name = "ironclaw_conversations"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Conversation binding and session thread contracts for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ironclaw_filesystem = { path = "../ironclaw_filesystem", version = "0.1.0" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_safety = { path = "../ironclaw_safety" }
ironclaw_triggers = { path = "../ironclaw_triggers", version = "0.1.0" }
ironclaw_turns = { path = "../ironclaw_turns", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
