[package]
name = "ironclaw_secrets"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hkdf = "0.12"
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
rand = "0.8"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }

[dev-dependencies]
tempfile = "3"
