[package]
name = "ironclaw_turns"
version = "0.1.0"
edition = "2024"
# Keep in sync with the workspace-level package.rust-version.
rust-version = "1.92"
description = "Host-layer turn coordination contracts for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
libsql = ["dep:libsql"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.14", optional = true }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio-postgres = { version = "0.7", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
static_assertions = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
